# MXNet-MLIR

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_and_run.sh  sample.txt  update-llvm.sh
MxNet-Opt/: CMakeLists.txt  MxNet-opt.cpp
hello-opt/: CMakeLists.txt  MxNet-opt.cpp
include/: CMakeLists.txt
include/Hello/: HelloOps.td  HelloPasses.h
include/MxNet/: CMakeLists.txt  MxNetDialect.h  MxNetDialect.td  MxNetOps.h  MxNetOps.td  MxNetPasses.h
lib/: CMakeLists.txt
lib/Hello/: CMakeLists.txt  LowerToAffine.cpp  LowerToTOSA.cpp  LowerToTosaTemplate.cpp
lib/MxNet/: CMakeLists.txt  LowerToAffine.cpp  LowerToLLVM.cpp  LowerToTOSA.cpp  MxNetDialect.cpp  MxNetOps.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Hello/: abs.mlir  add.mlir  mul.mlir  rsqrt.mlir
test/MxNet/: abs.mlir  add.mlir  rsqrt.mlir  sample-opt.mlir
test/add/: add.mlir  main.mlir  transpose.mlir
